{
    "name": "GamepadController",
    "maps": [
        {
            "name": "Controller",
            "id": "d7b63d87-1408-4ff2-9cc4-0aa2532cf7cc",
            "actions": [
                {
                    "name": "LeftStick",
                    "type": "Value",
                    "id": "1fe017ff-a1cc-4b4d-9010-d6ea970b3cc8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightStick",
                    "type": "Value",
                    "id": "e15f4c06-e828-4644-871b-5c1ae93ac12c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonNorth",
                    "type": "Button",
                    "id": "f9680a68-c492-47d5-8c8b-57c6f322cc96",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonSouth",
                    "type": "Button",
                    "id": "7f8f193b-143b-4e8f-805a-93f3350b469e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonEast",
                    "type": "Button",
                    "id": "08842545-466e-4efb-9977-d32815ad2ebf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonWest",
                    "type": "Button",
                    "id": "4fed2c69-4e88-4285-b077-09c466dfc29b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightShoulder",
                    "type": "Button",
                    "id": "602479b3-460c-4f25-be46-e2ae8bc6f299",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftShoulder",
                    "type": "Button",
                    "id": "4b4a7d8a-7425-4329-8545-59edb25408e4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightTrigger",
                    "type": "Button",
                    "id": "14ab88bb-a70a-44db-b9a2-686106bdd780",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftTrigger",
                    "type": "Button",
                    "id": "617e402f-d3fa-4744-88fb-1c385bb6d5f7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "15a1e21a-961c-49e0-aca4-df57593289ea",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "6fc14049-a660-4387-8a71-263953046e67",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftStickPress",
                    "type": "Button",
                    "id": "d65447c2-b69b-4d53-96d3-c450cf68f820",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightStickPress",
                    "type": "Button",
                    "id": "b1bb63a3-ff6f-4f2f-ba64-708912e83a9b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPad",
                    "type": "Value",
                    "id": "0458e9de-cc63-4ffb-919f-1b33943e681b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bc6e19e2-88f2-42e4-8878-361795f70505",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e8528f8-6a2e-4293-b7d8-8af3d4da2fec",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef506bd5-a3a2-4e30-a7b3-4404f1dd0e2e",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonNorth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "535d8aa3-8cd5-45ce-8fce-347ef98d6745",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonSouth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c2eb333-8309-4439-a041-f1d27bb01260",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonEast",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "088b0851-4c87-4f3b-b497-8ac07dd936ec",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonWest",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2aa516e1-7b34-45cb-84b0-4013756810f4",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67199077-5ea5-430f-af38-47658cdcac66",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "125dd82e-94dc-4172-b5ad-8116533b2a0f",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1959e73a-f759-4d3f-9ace-fb44360195e0",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5839911-2a9c-4873-9586-9bc91b759112",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21282903-c99d-402b-882b-dc9d2fec03a2",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e339d890-86e3-49c9-aa64-2f6fae7655b9",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStickPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db390310-0622-4df4-98dc-501dd770f6d1",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStickPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bec29a6c-f087-47ee-9491-025abfa318c2",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPad",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}